Terrassa back in yellow

--- a/public/index.html
+++ b/public/index.html
@@ -131,6 +131,11 @@
 <h2 id="this-is-my-blog-with-my-applied-data-science-projects">This is my blog with my applied data science projects</h2>
 
         
+        <a href="/contact" class="ripple-btn cta__btn" alt="Contact"
+    aria-label="Contact">
+    Contact
+</a>
+        
     </div>
 </main>
 
